--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@ w3.slideshow(".slides", 2000);
 <h3 class="w3-center w3-light-gray"> NOSM University, West Campus - Thunder Bay</h3>
 	<!-- This becomes the 'title' of the about section-->
 	<!-- Really title = heading1 = <h1> -->
-<p class="w3-container w3-left w3-padding-12"> About Myself: </p>
 <br />
-<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load">
+<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load" style="float: left>
 <p class="w3-left"> Hey! If you're reading this, you obviously have some connection to who I am. 
 However we met I want to express my happiness that we crossed paths. But you came here for more info. SO, allow me to tell you about myself. 
 
