--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@ w3.slideshow(".slides", 2000);
 	<!-- This becomes the 'title' of the about section-->
 	<!-- Really title = heading1 = <h1> -->
 <br />
-<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load" style="float: left>
+<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load" >
+	<br> 
+<br />
 <p class="w3-left"> Hey! If you're reading this, you obviously have some connection to who I am. 
 However we met I want to express my happiness that we crossed paths. But you came here for more info. SO, allow me to tell you about myself. 
 
