--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
 </ div>
 <!-- MOVE THE SLIDESHOW TEXT HERE SO IT GOES RIGHT UNDER THE NAV BAR -->
 
-
 Scroll down or use the naviation bar to see more.
 This webpage is hosted and coded by Davide Marchese ©2023.
 <br />
 There is currently nothing to see in "Home".
-
 
 <!-- UN COMMENT THIS OUT LATER. Also, images are not going nicely to edges
 <img class="slides" src="elite_smash_first.JPG" width="50%">
@@ -72,10 +70,9 @@ w3.slideshow(".slides", 2000);
 <p class="w3-left"> Hey! If you're reading this, you obviously have some connection to who I am. 
 However we met I want to express my happiness that we crossed paths. But you came here for more info. SO, allow me to tell you about myself. 
 
-<div class="myDIV"> I am a medical student who is passionate about hockey, soccer, technology, math, and science. 
-Some of my hobbies include video games, particularly Super Smash Bros. As well, I enjoy passing time with my partner and our dog, Malibu. </div>
-<div class="hide"> Can you guess my favourite team? I've hidden an Easter Egg somewhere on this webpage. Nobody has found it yet.</div>	
-
+<div class="myDIV"> I am a medical student who is passionate about hockey, soccer, technology, pathology, and science. As well, I enjoy passing time with my partner and our dog, Malibu.
+I enjoy learning so when not partaking in the aforementioned you likely would find me reading or studying!  </div>
+<!--<div class="hide"> Can you guess my favourite team? I've hidden an Easter Egg somewhere on this webpage. Nobody has found it yet.</div> -->
 <br />
 <br />
 Malibu is named after one of my father's past vehicles. This is a cogntive method designed to associate new material with my father's long-term memory.  
@@ -98,8 +95,8 @@ More to come. Have Suggestions... ...Please contact me..</p>
 
 <div class="w3-third">
 <!--Download my resume-->  
-<a href="" download>Nothing here at the moment</a>
-<p style="color:grey">Sorry this document has been removed for the time being. <!--Last Updated: August 2023--></p>
+<a href="" download>Nothing's here at the moment</a>
+<p style="color:grey">Sorry this document is currently being updated. <!--Last Updated: August 2023--></p>
 </div>
 
 <div class="w3-third">
