--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ w3.slideshow(".slides", 2000);
 <!-- About -->
 <div id="about" class="w3-container w3-padding-32">
 
-<h1 class="w3-center w3-black">Davide Marchese - 4th Year Medical Student</h1>
-<h3 class="w3-center w3-light-gray"> NOSM University, West Campus - Thunder Bay</h3>
+<h1 class="w3-center w3-black">Davide Marchese - 1st Year Resident</h1>
+<h3 class="w3-center w3-light-gray"> University of Alberta - Edmonton, AB</h3>
 	<!-- This becomes the 'title' of the about section-->
 	<!-- Really title = heading1 = <h1> -->
 <br />
@@ -206,7 +206,7 @@ Did you know Marner kissed me through the glass?
 <div class="w3-quarter w3-container">
 <img src="me+matty.GIF" class="w3-image" style="width:100%">
 <p>
-Look closely, this isn't Auston Matthews. Credit to Evan Sas
+Look closely at the facial features, this isn't only Auston Matthews.
 </p>
 </div>
 
@@ -236,7 +236,7 @@ Baby Malibu
 <div class="w3-quarter w3-container">
 <img src="brain.png" class="w3-image" style="width:100%">
 <p>
-Made by my classmate! Check out her charity @<a href="https://birchandbeads.ca" target="_blank" rel="noopener noreferrer">birchandbeads.ca</a>
+This beaded brain was made by my classmate - Check out her charity @<a href="https://birchandbeads.ca" target="_blank" rel="noopener noreferrer">birchandbeads.ca !</a>
 </p>
 </div>
 
