--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ w3.slideshow(".slides", 2000);
 <p class="w3-left"> Hey! If you're reading this, you obviously have some connection to who I am. 
 However we met I want to express my happiness that we crossed paths. But you came here for more info. SO, allow me to tell you about myself. 
 
-<div class="myDIV"> I am a medical student who is passionate about hockey, soccer, technology, pathology, and science. As well, I enjoy passing time with my partner and our dog, Malibu.
+<div class="myDIV"> I am a medical resident who is passionate about hockey, soccer, technology, pathology, and science. As well, I enjoy passing time with my partner and our dog, Malibu.
 I enjoy learning so when not partaking in the aforementioned you likely would find me reading or studying!  </div>
 <!--<div class="hide"> Can you guess my favourite team? I've hidden an Easter Egg somewhere on this webpage. Nobody has found it yet.</div> -->
 <br />
@@ -80,9 +80,7 @@ Malibu is named after one of my father's past vehicles. This is a cogntive metho
 <br />
 <br />
 <a href="https://www.youtube.com/watch?v=mrqg1oqfg_Y" title="My Home Town - Westfort Films" target="_blank">I am proud to say I'm from Thunder Bay.</a> 
-(Born and raised.) 
-<br />
-Follow the link for a wonderful song made by locals about Thunder Bay. 
+(Born and raised.) Follow the link for a wonderful song made by locals about Thunder Bay. 
 <br />
 <br />
 More to come. Have Suggestions... ...Please contact me..</p>
@@ -110,6 +108,7 @@ Learn solid state physics by reading
 <a href="FINAL_2_MSc_Marchese.pdf" download>my Master's thesis</a>
 </div>
 </div>
+<!--https://lurepository.lakeheadu.ca/handle/2453/4714-->
 
 <div class="w3-third w3-right">
 <p style="color:grey">Ok, ok. I admit it probably won't teach you anything but 
