--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@ w3.slideshow(".slides", 2000);
 <!-- About -->
 <div id="about" class="w3-container w3-padding-32">
 
-<h1 class="w3-center w3-black">Davide Marchese - 1st Year Resident</h1>
+<h1 class="w3-center w3-black">Davide Marchese - Resident Pathologist</h1>
 <h3 class="w3-center w3-light-gray"> University of Alberta - Edmonton, AB</h3>
 	<!-- This becomes the 'title' of the about section-->
 	<!-- Really title = heading1 = <h1> -->
 <br />
-<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load" >
+<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load" class="center" >
 	<br> 
 <br />
 <p class="w3-left"> Hey! If you're reading this, you obviously have some connection to who I am. 
