--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="w3-top w3-bar w3-black">
 <a href="#home" class="w3-bar-item w3-button">Home</a>
 <a href="#about" class="w3-bar-item w3-button">About</a>
-<a href="#Résumé" class="w3-bar-item w3-button">Résumé </a>
+<a href="#Résumé" class="w3-bar-item w3-button">Resume </a>
 <a href="#contact" class="w3-bar-item w3-button">Contact</a>
 <a href="#Gallery" class="w3-bar-item w3-button">Gallery</a>
 </div>
@@ -88,7 +88,7 @@ More to come. Have Suggestions... ...Please contact me..</p>
 
 <!-- Resume-->
 <div id="Résumé" class="w3-container w3-padding-32">
-<h2 class="w3-center">Résumé</h2>
+<h2 class="w3-center">Resume</h2>
 <div class="w3-row w3-center w3-light-gray">
 
 <div class="w3-third">
