--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ Baby Malibu
 <div class="w3-quarter w3-container">
 <img src="brain.png" class="w3-image" style="width:100%">
 <p>
-This beaded brain was made by my classmate - Check out her charity @<a href="https://birchandbeads.ca" target="_blank" rel="noopener noreferrer">birchandbeads.ca !</a>
+This beaded brain was made by my classmate - Check out her charity @<a href="https://birchandbeads.ca" target="_blank" rel="noopener noreferrer">birchandbeads.ca</a>!
 </p>
 </div>
 
