--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ w3.slideshow(".slides", 2000);
 	<!-- This becomes the 'title' of the about section-->
 	<!-- Really title = heading1 = <h1> -->
 <br />
-<img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load" class="center" >
+<center><img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load" class="center" ></center>
 	<br> 
 <br />
 <p class="w3-left"> Hey! If you're reading this, you obviously have some connection to who I am. 
