--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ w3.slideshow(".slides", 2000);
 <br />
 <center><img src="nosm_intro_photo.jpg" width="200" height="310" alt="Shown when image cannot load" class="center" ></center>
 <br />
-<p class="w3-left"> Hey! If you're reading this, you obviously have some connection to who I am. 
+<p class="w3-left"> Hey there! Guten! Hola! سلام ! 你好 ! If you're reading this, you obviously have some connection to who I am. 
 However we met I want to express my happiness that we crossed paths. But you came here for more info. SO, allow me to tell you about myself. 
 
 <div class="myDIV"> I am a medical resident who is passionate about hockey, soccer, technology, pathology, and science. As well, I enjoy passing time with my partner and our dog, Malibu.
