--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@ More to come. Have Suggestions... ...Please contact me..</p>
 <div class="w3-third">
 <!--Download my resume-->  
 <a href="" download>Nothing's here at the moment</a>
-<p style="color:grey">Sorry this document is currently being updated. <!--Last Updated: August 2023--></p>
+<p style="color:grey">Sorry this document is no longer available. <!--Last Updated: August 2023--></p>
 </div>
 
 <div class="w3-third">
 Download my CV 
-<a href="CV - March 24 - Davide Marchese.pdf" download>here</a>
-<p style="color:grey">Last Updated: March 2024</p>
+<a href="CV - September 2024 - Davide Marchese.pdf" download>here</a>
+<p style="color:grey">Last Updated: September 2024</p>
 </div>
 
 <div class="w3-third">
