--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	HTML5 specification encourages use of UTF-8 character set, which
 	 covers almost all of the characters & symbols in the world-->
 
-<title>Med Student: Davide M's Personal Website | About David, CV and photogallery</title>
+<title> Dr. Davide M's Personal Website | About David, CV and photogallery</title>
 	<!--this becomes the text in the browser tab -->
  <link rel="icon" type="image/x-icon" href="favicon_leafs_100DBD_transparent_2_TML.ico">
 	<!-- Favicon must be after title element -->
@@ -89,8 +89,8 @@ More to come. Have Suggestions... ...Please contact me..</p>
 
 <div class="w3-third">
 <!--Download my resume-->  
-<a href="" download>Nothing's here at the moment</a>
-<p style="color:grey">Sorry this document is no longer available. <!--Last Updated: August 2023--></p>
+<a href="" download>Notes on Molavi's Introduction to Surgical Pathology</a>
+<p style="color:grey">These were reproduced with author permission. Thank You Dr. Molavi. Notes on Robbins Pathology incoming. <!--Last Updated: August 2023--></p>
 </div>
 
 <div class="w3-third">
