--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ More to come. Have Suggestions... ...Please contact me..</p>
 
 <div class="w3-third">
 <!--Download my resume-->  
-<a href="" download>Notes on Molavi's Introduction to Surgical Pathology</a>
+<a href="Molavi Notes.pdf" download>Notes on Molavi's Introduction to Surgical Pathology</a>
 <p style="color:grey">These were reproduced with author permission. Thank You Dr. Molavi. Notes on Robbins Pathology incoming. <!--Last Updated: August 2023--></p>
 </div>
 
@@ -105,7 +105,6 @@ Learn solid state physics by reading
 </div>
 </div>
 <!--https://lurepository.lakeheadu.ca/handle/2453/4714-->
-
 <div class="w3-third w3-right">
 <p style="color:grey">Ok, ok. I admit it probably won't teach you anything but 
 writing "download here" three times is a tad dry.</p>
@@ -116,9 +115,9 @@ writing "download here" three times is a tad dry.</p>
 <!-- Contact -->
 <div id="contact" class="w3-container w3-center w3-padding-32">
 <h2 class="w3-wide">Contact</h2>
-Phone: REMOVED DUE TO SPAM<br>
-Email: REMOVED DUE TO SPAM<br>
-<p class="w3-opacity w3-center"><i><b>Have Comments? Email Me!</i></b>
+Phone: Removed due to spam<br>
+Email: Removed due to spam<br>
+<p class="w3-opacity w3-center"><i><b>Have Comments - please tell me!</i></b>
 <br />
 
 <!--
