--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ w3.slideshow(".slides", 2000);
 <p class="w3-left"> Salve! Guten! Hola! سلام ! 你好 ! If you're reading this, you obviously have some connection to who I am. 
 However we met I want to express my happiness that we crossed paths. But you came here for more info. SO, allow me to tell you about myself. 
 
-<div class="myDIV"> I am a medical resident who is passionate about hockey, soccer, technology, pathology, and science. As well, I enjoy passing time with my partner and our dog, Malibu.
+<div class="myDIV"> I am a medical resident who is passionate about hockey, soccer, technology, surgical pathology, and science. As well, I enjoy passing time with my partner and our dog, Malibu.
 I enjoy learning so when not partaking in the aforementioned you likely would find me reading or studying!  </div>
 <!--<div class="hide"> Can you guess my favourite team? I've hidden an Easter Egg somewhere on this webpage. Nobody has found it yet.</div> -->
 <br />
@@ -102,16 +102,14 @@ Download my CV
 <div class="w3-third">
 Learn solid state physics by reading 
 <a href="FINAL_2_MSc_Marchese.pdf" download>my Master's thesis</a>
+<p style="color:grey">Ok, ok. I admit it probably won't teach you anything but 
+writing "download here" three times is a tad dry.</p>
 </div>
 </div>
 <!--https://lurepository.lakeheadu.ca/handle/2453/4714-->
 <div class="w3-third w3-right">
-<p style="color:grey">Ok, ok. I admit it probably won't teach you anything but 
-writing "download here" three times is a tad dry.</p>
 </div>
-
 </div>
-
 <!-- Contact -->
 <div id="contact" class="w3-container w3-center w3-padding-32">
 <h2 class="w3-wide">Contact</h2>
